# WorkingStudent

./: .gitignore  README.md  README_GAB.md
Project/: 3D_soble.glsl  CMakeLists.txt  Doxyfile  Makefile  blurfragshader.glsl  camera.cpp  camera.h  cameracontrol.cpp  graphics.cpp  graphics.h  harrisfragshader.glsl  nonmaxsupfragshader.glsl  picam  picam.cpp  selectfragshader.glsl  sobelfragshader.glsl  tracking_toolbox.cpp  tracking_toolbox.h  types.h  windowfragshader.glsl  yuvfragshader.glsl
Project/FragmentShader/: cornermarkfragshader.glsl  difffragshader.glsl  gradientfragshader.glsl  harrisfragshader.glsl  multifragshader.glsl  nonmaxsupfragshader.glsl  nonmaxsupfragshader_visual.glsl  plusdifffragshader.glsl  plusfragshader.glsl  simplesobelfragshader.glsl  sobelfragshader.glsl
Project/html/: annotated.html  annotated_dup.js  camera_8cpp.html  camera_8cpp.js  camera_8h.html  camera_8h.js  camera_8h_source.html  cameracontrol_8cpp.html  cameracontrol_8cpp.js  cameracontrol_8h.html  cameracontrol_8h.js  cameracontrol_8h_source.html  class_c_camera-members.html  class_c_camera.html  class_c_camera.js  class_c_camera_output-members.html  class_c_camera_output.html  class_c_camera_output.js  class_gfx_program-members.html  class_gfx_program.html  class_gfx_program.js  class_gfx_shader-members.html  class_gfx_shader.html  class_gfx_shader.js  class_gfx_texture-members.html  class_gfx_texture.html  class_gfx_texture.js  class_image-members.html  class_image.html  class_image.js  classes.html  files.html  files.js  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_c.html  (+110 more)
Project/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  (+62 more)
Resource/: README.md
Resource/host_applications/linux/apps/raspicam/: CMakeLists.txt  RaspiVid.c  VisNavRaspiVid.c  VisNavRaspiVidYUV.c  VisNav_lib.h
picam_gpu/: picam.cpp
picamdemo/: camera.cpp  picam.cpp
(+5 files in other folders)
